--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 		<center><p style="font-size: 50px; padding-top: 100px; padding-bottom: 60px;">We're the Creators</p></center>
 		<div class="totalcard">
 			<div class="card">
-				<center><img src="images/creator/Photo.png"></center>
-				<center><div class="card-title">Vishal Jha</div>
+				<center><img src="images/creator/ronit.jpg"></center>
+				<center><div class="card-title">Ronit Roy</div>
 				<div id="detail">
 					<p>“ You can teach a student a lesson for a day; but if you can teach him to learn by creating curiosity, he will continue the learning process as long as he lives “</p>
 					<div class="duty"></div>
